Fix layout on mobile

--- a/wwwroot/css/output.css
+++ b/wwwroot/css/output.css
@@ -1246,6 +1246,10 @@ summary {
     display: block;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1262,5 +1266,11 @@ summary {
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:h-full {
+    height: 100%;
   }
 }
